...
import androidx.compose.ui.platform.LocalContext
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.unit.dp
import com.android.wildex.R

object LoadingScreenTestTags {
  const val LOADING_SCREEN = "loading_screen"
  const val LOADING_FAIL = "loading_fail"
}

/**
 * Displays a centered circular progress indicator used as a loading screen.
 *
 * @param modifier Optional Modifier applied to the root container.
...
